tests/toast-results/Ver_2_Tests-2023-06-21T21:37:40.688Z/jt18/jlog.txt
--app=Ver_2_Tests --port=1886 --group=4 --data=127.0.0.1:6379 --edge=1 --long=105.8840 --lat=85.7750 --localregistryhost=0 --device

------

Current Device Node Id: e5e05664-f45b-4f45-b65d-9765da01f6d6

Starting App..

{ cmd: 6700, opt: 6701, data: { lifetime: 3000, k: 3 } }

STDERR: node:internal/event_target:1012
  process.nextTick(() => { throw err; });
                           ^

TypeError: this.ncache.getNumofFogs is not a function
    at JAMCore.hoistFog (/home/pi/Desktop/JAMScript/lib/jside/core/jamcore.js:370:29)
    at JAMCore.processWorkerMsg (/home/pi/Desktop/JAMScript/lib/jside/core/jamcore.js:167:22)
    at MessagePort.<anonymous> (/home/pi/Desktop/JAMScript/lib/jside/core/jamcore.js:100:22)
    at [nodejs.internal.kHybridDispatch] (node:internal/event_target:737:20)
    at exports.emitMessage (node:internal/per_context/messageport:23:28)

Node.js v18.16.0
Killing broker with PID: 108125




Test: jt18 Completed Succesfully
Time to Compile: 11.886s
Time to Run Test: 10.015s
